[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-corelib"
version = "0.0.2"
description = "Core library for the Atlas Python ecosystem."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Atlas Developers" }
]

keywords = [
  "python",
  "atlas",
  "libraries",
  "ecosystem",
  "tools"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
  "typing_extensions>=4.8.0"
]

[project.urls]
Homepage = "https://github.com/light-dot-py/Atlas"
Repository = "https://github.com/light-dot-py/Atlas"
Issues = "https://github.com/light-dot-py/Atlas/issues"

[project.optional-dependencies]

dev = [
  "pytest>=8.2",
  "pytest-cov>=4.1",
  "black>=24.4",
  "ruff>=0.5",
  "mypy>=1.10"
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]

math = [
  "numpy>=1.26"
]

data = [
  "pandas>=2.2"
]

ai = [
  "scikit-learn>=1.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
